--- a/Doc_HTML/DrawCharge$$Option.html
+++ b/Doc_HTML/DrawCharge$$Option.html
@@ -81,7 +81,7 @@
         <div id="constructors" class="members">
               <h3>Instance Constructors</h3>
               <ol><li name="DrawCharge.Option#&lt;init&gt;" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="&lt;init&gt;(text:String,return_type:String):DrawCharge.Option"></a>
+      <a id="&lt;init&gt;(text:String,return_type:String,full_name:Boolean):DrawCharge.Option"></a>
       <a id="&lt;init&gt;:Option"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -89,10 +89,10 @@
         <span class="kind">new</span>
       </span>
       <span class="symbol">
-        <span class="name">Option</span><span class="params">(<span name="text">text: <span class="extype" name="scala.Predef.String">String</span></span>, <span name="return_type">return_type: <span class="extype" name="scala.Predef.String">String</span></span>)</span>
+        <span class="name">Option</span><span class="params">(<span name="text">text: <span class="extype" name="scala.Predef.String">String</span></span>, <span name="return_type">return_type: <span class="extype" name="scala.Predef.String">String</span></span>, <span name="full_name">full_name: <span class="extype" name="scala.Boolean">Boolean</span></span>)</span>
       </span>
       </h4>
-      <p class="shortcomment cmt"></p><div class="fullcomment"><div class="comment cmt"></div><dl class="paramcmts block"><dt class="param">text</dt><dd class="cmt"><p>Text display on the button</p></dd><dt class="param">return_type</dt><dd class="cmt"><p>Defines the action when the button is pressed
+      <p class="shortcomment cmt"></p><div class="fullcomment"><div class="comment cmt"></div><dl class="paramcmts block"><dt class="param">text</dt><dd class="cmt"><p>Text display on the button</p></dd><dt class="param">return_type</dt><dd class="cmt"><p>Defines the action when the button is pressed</p></dd><dt class="param">full_name</dt><dd class="cmt"><p>True if the file is given by its full path, else the file is in the Saves folder
 </p></dd></dl></div>
     </li></ol>
             </div>
