--- a/Doc_HTML/DrawCharge$.html
+++ b/Doc_HTML/DrawCharge$.html
@@ -82,7 +82,7 @@
         <div id="types" class="types members">
               <h3>Type Members</h3>
               <ol><li name="DrawCharge.CenterGrid" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="CenterGridextendsGridPanel"></a>
+      <a id="CenterGridextendsBorderPanel"></a>
       <a id="CenterGrid:CenterGrid"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -90,10 +90,23 @@
         <span class="kind">class</span>
       </span>
       <span class="symbol">
-        <a href="DrawCharge$$CenterGrid.html"><span class="name">CenterGrid</span></a><span class="result"> extends <span class="extype" name="scala.swing.GridPanel">GridPanel</span></span>
+        <a href="DrawCharge$$CenterGrid.html"><span class="name">CenterGrid</span></a><span class="result"> extends <span class="extype" name="scala.swing.BorderPanel">BorderPanel</span></span>
       </span>
       </h4>
       <p class="comment cmt">The main grid of the loading menu with everything.</p>
+    </li><li name="DrawCharge.ChoosePGN" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="ChoosePGNextendsAnyRef"></a>
+      <a id="ChoosePGN:ChoosePGN"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">class</span>
+      </span>
+      <span class="symbol">
+        <a href="DrawCharge$$ChoosePGN.html"><span class="name">ChoosePGN</span></a><span class="result"> extends <span class="extype" name="scala.AnyRef">AnyRef</span></span>
+      </span>
+      </h4>
+      <p class="comment cmt">Defines a JFileChooser method to get PGN in a file explorer</p>
     </li><li name="DrawCharge.Dcharge" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="DchargeextendsBorderPanel"></a>
       <a id="Dcharge:Dcharge"></a>
@@ -107,6 +120,19 @@
       </span>
       </h4>
       <p class="comment cmt">The final menu with the central grid and background columns on each sides of it.</p>
+    </li><li name="DrawCharge.FileChooserButton" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="FileChooserButtonextendsPrettyBigButton"></a>
+      <a id="FileChooserButton:FileChooserButton"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">class</span>
+      </span>
+      <span class="symbol">
+        <a href="DrawCharge$$FileChooserButton.html"><span class="name">FileChooserButton</span></a><span class="result"> extends <a href="PrettyBigButton.html" class="extype" name="PrettyBigButton">PrettyBigButton</a></span>
+      </span>
+      </h4>
+      <p class="comment cmt">Button to launch the file explorer</p>
     </li><li name="DrawCharge.Option" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="OptionextendsPrettyBigButton"></a>
       <a id="Option:Option"></a>
@@ -277,6 +303,19 @@
       </span>
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
+    </li><li name="DrawCharge#file_chosen" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="file_chosen:scala.swing.Label{defpath:String;defpath_=(x$1:String):Unit}"></a>
+      <a id="file_chosen:Label{.../*2definitionsintyperefinement*/}"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">var</span>
+      </span>
+      <span class="symbol">
+        <span class="name">file_chosen</span><span class="result">: <span class="extype" name="scala.swing.Label">Label</span> { ... /* 2 definitions in type refinement */ }</span>
+      </span>
+      </h4>
+      <p class="shortcomment cmt">Label that display the name of the file chosen by the file explorer</p>
     </li><li name="scala.AnyRef#finalize" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="finalize():Unit"></a>
       <a id="finalize():Unit"></a>
