--- a/Doc_HTML/DrawParameters$$Increment$IncButton.html
+++ b/Doc_HTML/DrawParameters$$Increment$IncButton.html
@@ -347,7 +347,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#contentAreaFilled_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="contentAreaFilled_=(b:&lt;?&gt;):Unit"></a>
+      <a id="contentAreaFilled_=(b:Boolean):Unit"></a>
       <a id="contentAreaFilled_=(Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -425,7 +425,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Button</dd></dl></div>
     </li><li name="scala.swing.Button#defaultCapable_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="defaultCapable_=(capable:&lt;?&gt;):Unit"></a>
+      <a id="defaultCapable_=(capable:Boolean):Unit"></a>
       <a id="defaultCapable_=(Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -477,7 +477,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#disabledSelectedIcon_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="disabledSelectedIcon_=(i:&lt;?&gt;):Unit"></a>
+      <a id="disabledSelectedIcon_=(i:javax.swing.Icon):Unit"></a>
       <a id="disabledSelectedIcon_=(Icon):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -516,7 +516,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#displayedMnemonicIndex_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="displayedMnemonicIndex_=(n:&lt;?&gt;):Unit"></a>
+      <a id="displayedMnemonicIndex_=(n:Int):Unit"></a>
       <a id="displayedMnemonicIndex_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -529,7 +529,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#doClick" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="doClick(times:&lt;?&gt;):Unit"></a>
+      <a id="doClick(times:Int):Unit"></a>
       <a id="doClick(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -639,7 +639,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#focusPainted_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="focusPainted_=(b:&lt;?&gt;):Unit"></a>
+      <a id="focusPainted_=(b:Boolean):Unit"></a>
       <a id="focusPainted_=(Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -782,7 +782,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#horizontalAlignment_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="horizontalAlignment_=(a:&lt;?&gt;):Unit"></a>
+      <a id="horizontalAlignment_=(a:scala.swing.Alignment.Value):Unit"></a>
       <a id="horizontalAlignment_=(scala.swing.Alignment.Value):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -808,7 +808,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#horizontalTextPosition_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="horizontalTextPosition_=(a:&lt;?&gt;):Unit"></a>
+      <a id="horizontalTextPosition_=(a:scala.swing.Alignment.Value):Unit"></a>
       <a id="horizontalTextPosition_=(scala.swing.Alignment.Value):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -847,7 +847,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#iconTextGap_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="iconTextGap_=(x:&lt;?&gt;):Unit"></a>
+      <a id="iconTextGap_=(x:Int):Unit"></a>
       <a id="iconTextGap_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -860,7 +860,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#icon_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="icon_=(i:&lt;?&gt;):Unit"></a>
+      <a id="icon_=(i:javax.swing.Icon):Unit"></a>
       <a id="icon_=(Icon):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1042,7 +1042,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#margin_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="margin_=(i:&lt;?&gt;):Unit"></a>
+      <a id="margin_=(i:scala.swing.Insets):Unit"></a>
       <a id="margin_=(Insets):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1120,7 +1120,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#mnemonic_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="mnemonic_=(k:&lt;?&gt;):Unit"></a>
+      <a id="mnemonic_=(k:scala.swing.event.Key.Value):Unit"></a>
       <a id="mnemonic_=(scala.swing.event.Key.Value):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1159,7 +1159,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#multiClickThreshold_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="multiClickThreshold_=(n:&lt;?&gt;):Unit"></a>
+      <a id="multiClickThreshold_=(n:Long):Unit"></a>
       <a id="multiClickThreshold_=(Long):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1393,7 +1393,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#pressedIcon_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="pressedIcon_=(i:&lt;?&gt;):Unit"></a>
+      <a id="pressedIcon_=(i:javax.swing.Icon):Unit"></a>
       <a id="pressedIcon_=(Icon):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1510,7 +1510,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#rolloverEnabled_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="rolloverEnabled_=(b:&lt;?&gt;):Unit"></a>
+      <a id="rolloverEnabled_=(b:Boolean):Unit"></a>
       <a id="rolloverEnabled_=(Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1536,7 +1536,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#rolloverIcon_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="rolloverIcon_=(b:&lt;?&gt;):Unit"></a>
+      <a id="rolloverIcon_=(b:javax.swing.Icon):Unit"></a>
       <a id="rolloverIcon_=(Icon):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1562,7 +1562,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#rolloverSelectedIcon_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="rolloverSelectedIcon_=(b:&lt;?&gt;):Unit"></a>
+      <a id="rolloverSelectedIcon_=(b:javax.swing.Icon):Unit"></a>
       <a id="rolloverSelectedIcon_=(Icon):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1601,7 +1601,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#selectedIcon_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="selectedIcon_=(i:&lt;?&gt;):Unit"></a>
+      <a id="selectedIcon_=(i:javax.swing.Icon):Unit"></a>
       <a id="selectedIcon_=(Icon):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1614,7 +1614,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#selected_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="selected_=(b:&lt;?&gt;):Unit"></a>
+      <a id="selected_=(b:Boolean):Unit"></a>
       <a id="selected_=(Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1705,7 +1705,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#text_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="text_=(s:&lt;?&gt;):Unit"></a>
+      <a id="text_=(s:String):Unit"></a>
       <a id="text_=(String):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1796,7 +1796,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#verticalAlignment_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="verticalAlignment_=(a:&lt;?&gt;):Unit"></a>
+      <a id="verticalAlignment_=(a:scala.swing.Alignment.Value):Unit"></a>
       <a id="verticalAlignment_=(scala.swing.Alignment.Value):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1822,7 +1822,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AbstractButton</dd></dl></div>
     </li><li name="scala.swing.AbstractButton#verticalTextPosition_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="verticalTextPosition_=(a:&lt;?&gt;):Unit"></a>
+      <a id="verticalTextPosition_=(a:scala.swing.Alignment.Value):Unit"></a>
       <a id="verticalTextPosition_=(scala.swing.Alignment.Value):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
