--- a/Doc_HTML/DrawParameters$$SubMenuChoice.html
+++ b/Doc_HTML/DrawParameters$$SubMenuChoice.html
@@ -81,7 +81,7 @@
         <div id="constructors" class="members">
               <h3>Instance Constructors</h3>
               <ol><li name="DrawParameters.SubMenuChoice#&lt;init&gt;" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="&lt;init&gt;(id:Int,current_menu:Boolean):DrawParameters.SubMenuChoice"></a>
+      <a id="&lt;init&gt;(id:Int,current_menu:Int):DrawParameters.SubMenuChoice"></a>
       <a id="&lt;init&gt;:SubMenuChoice"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -89,7 +89,7 @@
         <span class="kind">new</span>
       </span>
       <span class="symbol">
-        <span class="name">SubMenuChoice</span><span class="params">(<span name="id">id: <span class="extype" name="scala.Int">Int</span></span>, <span name="current_menu">current_menu: <span class="extype" name="scala.Boolean">Boolean</span></span>)</span>
+        <span class="name">SubMenuChoice</span><span class="params">(<span name="id">id: <span class="extype" name="scala.Int">Int</span></span>, <span name="current_menu">current_menu: <span class="extype" name="scala.Int">Int</span></span>)</span>
       </span>
       </h4>
       <p class="shortcomment cmt"></p><div class="fullcomment"><div class="comment cmt"></div><dl class="paramcmts block"><dt class="param">id</dt><dd class="cmt"><p>The id of the submenu</p></dd><dt class="param">current_menu</dt><dd class="cmt"><p>True if this menu is the one the user is in
