--- a/Doc_HTML/DrawSave$$RightAdvancedGrid.html
+++ b/Doc_HTML/DrawSave$$RightAdvancedGrid.html
@@ -319,7 +319,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>GridPanel</dd></dl></div>
     </li><li name="scala.swing.GridPanel#columns_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="columns_=(n:Int):Unit"></a>
+      <a id="columns_=(n:&lt;?&gt;):Unit"></a>
       <a id="columns_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -572,7 +572,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>GridPanel</dd></dl></div>
     </li><li name="scala.swing.GridPanel#hGap_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="hGap_=(n:Int):Unit"></a>
+      <a id="hGap_=(n:&lt;?&gt;):Unit"></a>
       <a id="hGap_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1144,7 +1144,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>GridPanel</dd></dl></div>
     </li><li name="scala.swing.GridPanel#rows_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="rows_=(n:Int):Unit"></a>
+      <a id="rows_=(n:&lt;?&gt;):Unit"></a>
       <a id="rows_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1300,7 +1300,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>GridPanel</dd></dl></div>
     </li><li name="scala.swing.GridPanel#vGap_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="vGap_=(n:Int):Unit"></a>
+      <a id="vGap_=(n:&lt;?&gt;):Unit"></a>
       <a id="vGap_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
