--- a/Doc_HTML/DrawSave$$SaveLabel.html
+++ b/Doc_HTML/DrawSave$$SaveLabel.html
@@ -334,7 +334,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Label</dd></dl></div>
     </li><li name="scala.swing.Label#disabledIcon_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="disabledIcon_=(icon:javax.swing.Icon):Unit"></a>
+      <a id="disabledIcon_=(icon:&lt;?&gt;):Unit"></a>
       <a id="disabledIcon_=(Icon):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -373,7 +373,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Label</dd></dl></div>
     </li><li name="scala.swing.Label#displayedMnemonicIndex_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="displayedMnemonicIndex_=(index:Int):Unit"></a>
+      <a id="displayedMnemonicIndex_=(index:&lt;?&gt;):Unit"></a>
       <a id="displayedMnemonicIndex_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -587,7 +587,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Label</dd></dl></div>
     </li><li name="scala.swing.Label#horizontalAlignment_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="horizontalAlignment_=(x:scala.swing.Alignment.Value):Unit"></a>
+      <a id="horizontalAlignment_=(x:&lt;?&gt;):Unit"></a>
       <a id="horizontalAlignment_=(scala.swing.Alignment.Value):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -652,7 +652,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Label</dd></dl></div>
     </li><li name="scala.swing.Label#iconTextGap_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="iconTextGap_=(gap:Int):Unit"></a>
+      <a id="iconTextGap_=(gap:&lt;?&gt;):Unit"></a>
       <a id="iconTextGap_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -665,7 +665,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Label</dd></dl></div>
     </li><li name="scala.swing.Label#icon_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="icon_=(i:javax.swing.Icon):Unit"></a>
+      <a id="icon_=(i:&lt;?&gt;):Unit"></a>
       <a id="icon_=(Icon):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1367,7 +1367,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Label</dd></dl></div>
     </li><li name="scala.swing.Label#verticalAlignment_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="verticalAlignment_=(x:scala.swing.Alignment.Value):Unit"></a>
+      <a id="verticalAlignment_=(x:&lt;?&gt;):Unit"></a>
       <a id="verticalAlignment_=(scala.swing.Alignment.Value):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1502,7 +1502,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Label</dd></dl></div>
     </li><li name="scala.swing.Label#xAlignment_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="xAlignment_=(x:scala.swing.Alignment.Value):Unit"></a>
+      <a id="xAlignment_=(x:&lt;?&gt;):Unit"></a>
       <a id="xAlignment_=(scala.swing.Alignment.Value):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1554,7 +1554,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Label</dd></dl></div>
     </li><li name="scala.swing.Label#yAlignment_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="yAlignment_=(x:scala.swing.Alignment.Value):Unit"></a>
+      <a id="yAlignment_=(x:&lt;?&gt;):Unit"></a>
       <a id="yAlignment_=(scala.swing.Alignment.Value):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
