--- a/Doc_HTML/Load$$Reproducer.html
+++ b/Doc_HTML/Load$$Reproducer.html
@@ -246,19 +246,6 @@
       </span>
       </h4>
       <p class="shortcomment cmt">Return true if the game is nulle because there has been 50 boring move</p><div class="fullcomment"><div class="comment cmt"><p>Return true if the game is nulle because there has been 50 boring move</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Player.html" class="extype" name="Player">Player</a></dd></dl></div>
-    </li><li name="Player#check_nulle" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="check_nulle:Boolean"></a>
-      <a id="check_nulle:Boolean"></a>
-      <h4 class="signature">
-      <span class="modifier_kind">
-        <span class="modifier"></span>
-        <span class="kind">def</span>
-      </span>
-      <span class="symbol">
-        <span class="name">check_nulle</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
-      </span>
-      </h4>
-      <p class="shortcomment cmt">Returns true if</p><div class="fullcomment"><div class="comment cmt"><p>Returns true if</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Player.html" class="extype" name="Player">Player</a></dd></dl></div>
     </li><li name="Load.Reproducer#check_pat" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="check_pat:Boolean"></a>
       <a id="check_pat:Boolean"></a>
@@ -285,6 +272,19 @@
       </span>
       </h4>
       <p class="shortcomment cmt">Return true if the game is nulle because there has been a triple repetition in position</p><div class="fullcomment"><div class="comment cmt"><p>Return true if the game is nulle because there has been a triple repetition in position</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Player.html" class="extype" name="Player">Player</a></dd></dl></div>
+    </li><li name="Player#check_trivial_nulle" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
+      <a id="check_trivial_nulle:Boolean"></a>
+      <a id="check_trivial_nulle:Boolean"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">def</span>
+      </span>
+      <span class="symbol">
+        <span class="name">check_trivial_nulle</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+      </span>
+      </h4>
+      <p class="shortcomment cmt">Returns true if players do not have enough pieces to mate</p><div class="fullcomment"><div class="comment cmt"><p>Returns true if players do not have enough pieces to mate</p></div><dl class="attributes block"> <dt>Definition Classes</dt><dd><a href="Player.html" class="extype" name="Player">Player</a></dd></dl></div>
     </li><li name="scala.AnyRef#clone" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="clone():Object"></a>
       <a id="clone():AnyRef"></a>
