--- a/Doc_HTML/Player.html
+++ b/Doc_HTML/Player.html
@@ -277,19 +277,6 @@
       </span>
       </h4>
       <p class="shortcomment cmt">Return true if the game is nulle because there has been 50 boring move</p>
-    </li><li name="Player#check_nulle" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
-      <a id="check_nulle:Boolean"></a>
-      <a id="check_nulle:Boolean"></a>
-      <h4 class="signature">
-      <span class="modifier_kind">
-        <span class="modifier"></span>
-        <span class="kind">def</span>
-      </span>
-      <span class="symbol">
-        <span class="name">check_nulle</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
-      </span>
-      </h4>
-      <p class="shortcomment cmt">Returns true if</p>
     </li><li name="Player#check_triple_repetition" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
       <a id="check_triple_repetition:Boolean"></a>
       <a id="check_triple_repetition:Boolean"></a>
@@ -303,6 +290,19 @@
       </span>
       </h4>
       <p class="shortcomment cmt">Return true if the game is nulle because there has been a triple repetition in position</p>
+    </li><li name="Player#check_trivial_nulle" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="check_trivial_nulle:Boolean"></a>
+      <a id="check_trivial_nulle:Boolean"></a>
+      <h4 class="signature">
+      <span class="modifier_kind">
+        <span class="modifier"></span>
+        <span class="kind">def</span>
+      </span>
+      <span class="symbol">
+        <span class="name">check_trivial_nulle</span><span class="result">: <span class="extype" name="scala.Boolean">Boolean</span></span>
+      </span>
+      </h4>
+      <p class="shortcomment cmt">Returns true if players do not have enough pieces to mate</p>
     </li><li name="scala.AnyRef#clone" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="clone():Object"></a>
       <a id="clone():AnyRef"></a>
