--- a/Doc_HTML/DrawBoard$$PlayButton.html
+++ b/Doc_HTML/DrawBoard$$PlayButton.html
@@ -80,8 +80,8 @@
         <div id="allMembers">
         <div id="constructors" class="members">
               <h3>Instance Constructors</h3>
-              <ol><li name="DrawBoard.PlayButton#&lt;init&gt;" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="&lt;init&gt;(player:Int):DrawBoard.PlayButton"></a>
+              <ol><li name="DrawBoard.PlayButton#&lt;init&gt;" visbl="pub" data-isabs="false" fullComment="no" group="Ungrouped">
+      <a id="&lt;init&gt;(player_id:Int,player_type:String):DrawBoard.PlayButton"></a>
       <a id="&lt;init&gt;:PlayButton"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -89,11 +89,10 @@
         <span class="kind">new</span>
       </span>
       <span class="symbol">
-        <span class="name">PlayButton</span><span class="params">(<span name="player">player: <span class="extype" name="scala.Int">Int</span></span>)</span>
+        <span class="name">PlayButton</span><span class="params">(<span name="player_id">player_id: <span class="extype" name="scala.Int">Int</span></span>, <span name="player_type">player_type: <span class="extype" name="scala.Predef.String">String</span></span>)</span>
       </span>
       </h4>
-      <p class="shortcomment cmt"></p><div class="fullcomment"><div class="comment cmt"></div><dl class="paramcmts block"><dt class="param">player</dt><dd class="cmt"><p>The player that the human will control by clicking on this button
-</p></dd></dl></div>
+      <p class="shortcomment cmt"></p>
     </li></ol>
             </div>
 
