--- a/Doc_HTML/DrawParameters$$SubMenus.html
+++ b/Doc_HTML/DrawParameters$$SubMenus.html
@@ -321,7 +321,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>GridPanel</dd></dl></div>
     </li><li name="scala.swing.GridPanel#columns_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="columns_=(n:&lt;?&gt;):Unit"></a>
+      <a id="columns_=(n:Int):Unit"></a>
       <a id="columns_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -360,7 +360,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>UIElement</dd></dl></div>
     </li><li name="scala.swing.UIElement#cursor_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="cursor_=(c:&lt;?&gt;):Unit"></a>
+      <a id="cursor_=(c:java.awt.Cursor):Unit"></a>
       <a id="cursor_=(Cursor):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -373,7 +373,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>UIElement</dd></dl></div>
     </li><li name="scala.swing.Reactor#deafTo" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="deafTo(ps:&lt;?&gt;):Unit"></a>
+      <a id="deafTo(ps:scala.swing.Publisher*):Unit"></a>
       <a id="deafTo(Publisher*):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -483,7 +483,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Component</dd></dl></div>
     </li><li name="scala.swing.Component#focusable_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="focusable_=(b:&lt;?&gt;):Unit"></a>
+      <a id="focusable_=(b:Boolean):Unit"></a>
       <a id="focusable_=(Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -574,7 +574,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>GridPanel</dd></dl></div>
     </li><li name="scala.swing.GridPanel#hGap_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="hGap_=(n:&lt;?&gt;):Unit"></a>
+      <a id="hGap_=(n:Int):Unit"></a>
       <a id="hGap_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -626,7 +626,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>UIElement</dd></dl></div>
     </li><li name="scala.swing.UIElement#ignoreRepaint_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="ignoreRepaint_=(b:&lt;?&gt;):Unit"></a>
+      <a id="ignoreRepaint_=(b:Boolean):Unit"></a>
       <a id="ignoreRepaint_=(Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -665,7 +665,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Component</dd></dl></div>
     </li><li name="scala.swing.Component#inputVerifier_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="inputVerifier_=(v:&lt;?&gt;):Unit"></a>
+      <a id="inputVerifier_=(v:scala.swing.Component=&gt;Boolean):Unit"></a>
       <a id="inputVerifier_=((Component)⇒Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -847,7 +847,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Component</dd></dl></div>
     </li><li name="scala.swing.Component#name_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="name_=(s:&lt;?&gt;):Unit"></a>
+      <a id="name_=(s:String):Unit"></a>
       <a id="name_=(String):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -951,7 +951,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Component</dd></dl></div>
     </li><li name="scala.swing.Component#paint" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="paint(g:&lt;?&gt;):Unit"></a>
+      <a id="paint(g:scala.swing.Graphics2D):Unit"></a>
       <a id="paint(Graphics2D):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -964,7 +964,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Component</dd></dl></div>
     </li><li name="scala.swing.Component#paintBorder" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="paintBorder(g:&lt;?&gt;):Unit"></a>
+      <a id="paintBorder(g:scala.swing.Graphics2D):Unit"></a>
       <a id="paintBorder(Graphics2D):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -977,7 +977,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Attributes</dt><dd>protected </dd><dt>Definition Classes</dt><dd>Component</dd></dl></div>
     </li><li name="scala.swing.Component#paintChildren" visbl="prt" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="paintChildren(g:&lt;?&gt;):Unit"></a>
+      <a id="paintChildren(g:scala.swing.Graphics2D):Unit"></a>
       <a id="paintChildren(Graphics2D):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1042,7 +1042,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>UIElement</dd></dl></div>
     </li><li name="scala.swing.Publisher#publish" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="publish(e:&lt;?&gt;):Unit"></a>
+      <a id="publish(e:scala.swing.event.Event):Unit"></a>
       <a id="publish(Event):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1068,7 +1068,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Reactor</dd></dl></div>
     </li><li name="scala.swing.UIElement#repaint" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="repaint(rect:&lt;?&gt;):Unit"></a>
+      <a id="repaint(rect:scala.swing.Rectangle):Unit"></a>
       <a id="repaint(Rectangle):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1146,7 +1146,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>GridPanel</dd></dl></div>
     </li><li name="scala.swing.GridPanel#rows_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="rows_=(n:&lt;?&gt;):Unit"></a>
+      <a id="rows_=(n:Int):Unit"></a>
       <a id="rows_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1263,7 +1263,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Component</dd></dl></div>
     </li><li name="scala.swing.Component#tooltip_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="tooltip_=(t:&lt;?&gt;):Unit"></a>
+      <a id="tooltip_=(t:String):Unit"></a>
       <a id="tooltip_=(String):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1302,7 +1302,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>GridPanel</dd></dl></div>
     </li><li name="scala.swing.GridPanel#vGap_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="vGap_=(n:&lt;?&gt;):Unit"></a>
+      <a id="vGap_=(n:Int):Unit"></a>
       <a id="vGap_=(Int):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1328,7 +1328,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>UIElement</dd></dl></div>
     </li><li name="scala.swing.UIElement#visible_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="visible_=(b:&lt;?&gt;):Unit"></a>
+      <a id="visible_=(b:Boolean):Unit"></a>
       <a id="visible_=(Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1411,7 +1411,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Component</dd></dl></div>
     </li><li name="scala.swing.Component#xLayoutAlignment_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="xLayoutAlignment_=(x:&lt;?&gt;):Unit"></a>
+      <a id="xLayoutAlignment_=(x:Double):Unit"></a>
       <a id="xLayoutAlignment_=(Double):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
@@ -1437,7 +1437,7 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>Component</dd></dl></div>
     </li><li name="scala.swing.Component#yLayoutAlignment_=" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="yLayoutAlignment_=(y:&lt;?&gt;):Unit"></a>
+      <a id="yLayoutAlignment_=(y:Double):Unit"></a>
       <a id="yLayoutAlignment_=(Double):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
