--- a/Doc_HTML/Load$.html
+++ b/Doc_HTML/Load$.html
@@ -348,20 +348,20 @@
       </h4>
       <div class="fullcomment"><dl class="attributes block"> <dt>Definition Classes</dt><dd>AnyRef → Any</dd></dl></div>
     </li><li name="Load#get_list_move_from_file" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
-      <a id="get_list_move_from_file(filename:String):Unit"></a>
-      <a id="get_list_move_from_file(String):Unit"></a>
+      <a id="get_list_move_from_file(filename:String,full_name:Boolean):Unit"></a>
+      <a id="get_list_move_from_file(String,Boolean):Unit"></a>
       <h4 class="signature">
       <span class="modifier_kind">
         <span class="modifier"></span>
         <span class="kind">def</span>
       </span>
       <span class="symbol">
-        <span class="name">get_list_move_from_file</span><span class="params">(<span name="filename">filename: <span class="extype" name="scala.Predef.String">String</span></span>)</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
+        <span class="name">get_list_move_from_file</span><span class="params">(<span name="filename">filename: <span class="extype" name="scala.Predef.String">String</span></span>, <span name="full_name">full_name: <span class="extype" name="scala.Boolean">Boolean</span></span>)</span><span class="result">: <span class="extype" name="scala.Unit">Unit</span></span>
       </span>
       </h4>
       <p class="shortcomment cmt">Reads from file.</p><div class="fullcomment"><div class="comment cmt"><p>Reads from file. filename is the name of the file without the .pgn extension.
       It escapes variations and comments and linefeed character.
-</p></div><dl class="paramcmts block"><dt class="param">filename</dt><dd class="cmt"><p>The name of the file we will read
+</p></div><dl class="paramcmts block"><dt class="param">filename</dt><dd class="cmt"><p>The name of the file we will read</p></dd><dt class="param">full_name</dt><dd class="cmt"><p>True is the file is given with its full path
 </p></dd></dl></div>
     </li><li name="scala.AnyRef#hashCode" visbl="pub" data-isabs="false" fullComment="yes" group="Ungrouped">
       <a id="hashCode():Int"></a>
